Mon Aug 21 13:16:00 BST 2000 Olly Betts

	* Added test that sessions get ended correctly if class is destroyed
	  without end_session() being explicitly called (test only works in a
	  debug build).

	* MultiMatch::match() -> MultiMatch::get_mset()

Mon Aug 21 12:44:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* using_stemmers.html updated, to use void * rather than struct
	  <foo> *, and to make the example code compile and work correctly.

Mon Aug 21 12:13:00 BST 2000 Olly Betts

	* Removed lingering traces of get_max_weight().

	* Pruned TODO.

Mon Aug 21 11:57:00 BST 2000 Olly Betts

	* OmDocumentTerm::add_posting now first checks for the case where it
	  can simply the new positional info (since positions are usually
	  added in increasing order)

Mon Aug 21 11:30:00 BST 2000 Olly Betts

	* LocalMatch::get_max_weight() isn't externally visible, so removed it
	  entirely

Sun Aug 20 18:09:00 BST 2000 Olly Betts

	* Corrected minor typos, etc in documentation.

Sun Aug 20 17:35:00 BST 2000 Olly Betts

	* All externally visibile references to "net"/"network" backend now
	  call it "remote".

Sun Aug 20 17:12:00 BST 2000 Olly Betts

	* Started to rename net/network backend to remote (passes make check
	  at this point).

Sun Aug 20 16:17:00 BST 2000 Olly Betts

	* Overhaul of LocalMatch: get_max_weight deprecated and now just
	  throws OmUnimplementedError; various class members now just local
	  to get_mset; renamed recalculate_maxweight to recalculate_w_max
	  since it forces recalculation of w_max and not max_weight.

	* includetest now checks that found headers are actually files
	  and ignores any headers in bindings (not just java related ones).

Sun Aug 20 14:19:00 BST 2000 Olly Betts

	* Added support for muscat36 da backend to backendmanager (uses
	  makeDA program, so only works on Linux).  Some tests won't work
	  with this backend as it doesn't support word-based positional
	  information or document lengths.
