@@ -3,11 +3,15 @@
 INCLUDES = -I$(top_srcdir)/common -I$(top_srcdir)/include \
            @BERKELEY_3_1_INCLUDES@
 
-noinst_HEADERS = quartz_database.h quartz_db_manager.h quartz_modifications.h
+noinst_HEADERS =       quartz_database.h \
+                       quartz_db_manager.h \
+		       quartz_modifications.h
+
+libquartz_la_SOURCES = quartz_database.cc \
+                       quartz_db_manager.cc \
+		       quartz_modifications.cc
 
 noinst_LTLIBRARIES = libquartz.la
-
-libquartz_la_SOURCES = quartz_database.cc quartz_db_manager.cc
 
 libquartz_la_LIBADD = @BERKELEY_3_1_LIBS@
 
