@@ -38,14 +38,15 @@
                 endl;
         exit(<FONT color=#ff00ff>1</FONT>);
     }
-
+    
     <FONT color=#0000ff>// Catch any OmError exceptions thrown</FONT>
     <B><FONT color=#a52a2a>try</FONT></B> {
         <FONT color=#0000ff>// Make the database group</FONT>
+        OmSettings settings;
+        settings.set_value(<FONT color=#ff00ff>&quot;backend&quot;</FONT>, <FONT color=#ff00ff>&quot;sleepycat&quot;</FONT>);
+        settings.set_value(<FONT color=#ff00ff>&quot;sleepy_dir&quot;</FONT>, argv[<FONT color=#ff00ff>1</FONT>]);
         OmDatabaseGroup databases;
-        vector&lt;string&gt; parameters;
-        parameters.push_back(argv[<FONT color=#ff00ff>1</FONT>]);
-        databases.add_database(<FONT color=#ff00ff>&quot;sleepycat&quot;</FONT>, parameters);
+        databases.add_database(settings);
 
         <FONT color=#0000ff>// Start an enquire session</FONT>
         OmEnquire enquire(databases);
@@ -108,7 +109,7 @@
                 reldocs.add_document(i-&gt;did);
             }
         }
-
+        
         <FONT color=#0000ff>// Get the suggested expand terms</FONT>
         OmESet eterms = enquire.get_eset(<FONT color=#ff00ff>10</FONT>, reldocs);
 
