@@ -37,13 +37,14 @@
                 <FONT color=#ff00ff>&quot; &lt;path to database&gt; &lt;document data&gt; &lt;document terms&gt;&quot;</FONT> &lt;&lt; endl;
         exit(<FONT color=#ff00ff>1</FONT>);
     }
-
+    
     <FONT color=#0000ff>// Catch any OmError exceptions thrown</FONT>
     <B><FONT color=#a52a2a>try</FONT></B> {
         <FONT color=#0000ff>// Make the database</FONT>
-        vector&lt;string&gt; parameters;
-        parameters.push_back(argv[<FONT color=#ff00ff>1</FONT>]);
-        OmWritableDatabase database(<FONT color=#ff00ff>&quot;sleepycat&quot;</FONT>, parameters);
+        OmSettings settings;
+        settings.set_value(<FONT color=#ff00ff>&quot;backend&quot;</FONT>, <FONT color=#ff00ff>&quot;sleepycat&quot;</FONT>);
+        settings.set_value(<FONT color=#ff00ff>&quot;sleepy_dir&quot;</FONT>, argv[<FONT color=#ff00ff>1</FONT>]);
+        OmWritableDatabase database(settings);
 
         <FONT color=#0000ff>// Make the document</FONT>
         OmDocumentContents newdocument;
