@@ -1,3 +1,9 @@
+Mon Aug 21 13:52:34 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>
+
+	* Update html versions of simpleexample code, to reflect new API.
+
+	* Add quartz_modifications.cc so that quartz db will link.
+
 Mon Aug 21 13:16:00 BST 2000 Olly Betts
 
 	* Added test that sessions get ended correctly if class is destroyed
